--- a/app/Makefile
+++ b/app/Makefile
@@ -8,9 +8,9 @@ REPO_NAME = $(REGISTRY_ID).dkr.ecr.$(REPOSITORY_REGION).amazonaws.com/${APP_NAME
 .PHONY: build
 build:
 	$(MAKE) docker-login
-	sudo docker build -t $(REPO_NAME):$(TAG) -f ./Dockerfile .
-	sudo docker push $(REPO_NAME):$(TAG)
+	docker build -t $(REPO_NAME):$(TAG) -f ./Dockerfile .
+	docker push $(REPO_NAME):$(TAG)
 
 .PHONY: docker-login
 docker-login:
-	aws ecr get-login-password --region $(REPOSITORY_REGION) | sudo docker login --username AWS --password-stdin $(REGISTRY_ID).dkr.ecr.$(REPOSITORY_REGION).amazonaws.com
+	aws ecr get-login-password --region $(REPOSITORY_REGION) | docker login --username AWS --password-stdin $(REGISTRY_ID).dkr.ecr.$(REPOSITORY_REGION).amazonaws.com
