Changed in buildspec.yml

--- a/environment/dev/buildspec.yml
+++ b/environment/dev/buildspec.yml
@@ -27,6 +27,7 @@ phases:
       
   build:
     commands:
+      - aws ecr get-login-password --region $REPOSITORY_REGION | docker login --username AWS --password-stdin $REGISTRY_ID.dkr.ecr.$REPOSITORY_REGION.amazonaws.com
       - echo "Build and push docker images"
       - cd "${CODEBUILD_SRC_DIR}/app"
       - export TAG="${CODEBUILD_RESOLVED_SOURCE_VERSION}-${ENV}"
